--- a/WEbsite/index.html
+++ b/WEbsite/index.html
@@ -11,6 +11,11 @@
     <h1 id="my"></h1>
     <p id="my0"></p>
 
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p>
+
     <script src="script.js"></script>
+    <script src="variable.js"></script>
 </body>
 </html>
