--- a/WEbsite/index.html
+++ b/WEbsite/index.html
@@ -16,6 +16,6 @@
     <p id="p3"></p>
 
     <script src="script.js"></script>
-    <script src="variable.js"></script>
+    <!-- <script src="variable.js"></script> -->
 </body>
 </html>
