--- a/WEbsite/index.html
+++ b/WEbsite/index.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     
-    <h1 id="my"></h1>
+    <!-- <h1 id="my"></h1>
     <p id="my0"></p>
 
     <p id="p1"></p>
     <p id="p2"></p>
-    <p id="p3"></p>
+    <p id="p3"></p> -->
 
-    <script src="script.js"></script>
+    <h1 id = "MyH1">Welcome</h1>
+    <label > Username</label>
+    <input id="mytext"><br><br>
+    <button id="mySubmit">Submit</button>
+
+
+
+    <script src="user.js"></script>
+    <!-- <script src="script.js"></script> -->
     <!-- <script src="variable.js"></script> -->
 </body>
 </html>
